--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  .thin {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
@@ -16,9 +16,9 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="container thin">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Страница не найдена :(</strong></p>
+  <p>По введённому адресу страницы не существует.</p>
 </div>
