--- a/domain.html
+++ b/domain.html
@@ -130,7 +130,7 @@ layout: default
                                 <div class="amount">
                                     <h4>ваш-сайт.ру <span>199&#8381;</span></h4>
                                     <p>1 год</p>
-                                    <h4 class="extra-fee">Extra fee:
+                                    <h4 class="extra-fee">Со скидкой:
                                         <Span>199&#8381;</Span>
                                     </h4>
                                 </div>
